(navlets): Fix jumping on link click. Fix unnecessary button margin

--- a/media/style/navlets.css
+++ b/media/style/navlets.css
@@ -14,3 +14,7 @@
     right: 0;
     top: 0;
 }
+
+.navlet .navlet-action-group .button {
+    margin-bottom: 0;
+}
